# HotBerry

./: CMakeLists.txt  Hardware modifications  hotberry.h
board/: hotberry.h
hardware/: 2-layer.b##  2-layer.brd  2-layer.s##  4-layer.b##  4-layer.b#1  4-layer.b#2  4-layer.b#3  4-layer.b#4  4-layer.b#5  4-layer.b#6  4-layer.b#7  4-layer.b#8  4-layer.b#9  4-layer.brd  4-layer.sch  eagle.epf  eagle.scr  untitled.b##  untitled.b#1  untitled.b#2  untitled.b#3  untitled.b#4  untitled.b#5  untitled.b#6  untitled.b#7  untitled.b#8  untitled.b#9  untitled.s#2  untitled.s#3  untitled.s#4  untitled.s#5  untitled.s#6  untitled.s#7  untitled.s#8  untitled.s#9  untitledz.b#1  untitledz.b#2  untitledz.b#3  untitledz.b#4  untitledz.b#6  (+4 more)
include/: FreeRTOSConfig.h  globals.h  lv_conf.h  lv_drivers.h
lib/AT24C16/: AT24C16.cpp  AT24C16.h  CMakeLists.txt
lib/AT24Cxx/: AT24Cxx.h  CMakeLists.txt
lib/HC595/: CMakeLists.txt  HC595.cpp  HC595.h
lib/MAX6675/: CMakeLists.txt  MAX6675.cpp  MAX6675.h
lib/PID/: CMakeLists.txt  pid.cpp  pid.h
lib/ili9486_drivers/: CMakeLists.txt  ili9486_commands.h  ili9486_drivers.cpp  ili9486_drivers.h  pio_8bit_parallel.pio.h
lib/lv_app/: CMakeLists.txt  colors.h  documents_icon.c  finger_icon.c  hotberry_logo.c  keyboard.cpp  keyboard.h  lv_app.cpp  lv_app.h  robot_icon.c  setting_icon.c  temperature_icon.c
lib/movingAvg/: CMakeLists.txt  movingAvg.cpp  movingAvg.h
src/: lv_conf.h  lv_drivers.cpp  main.cpp
